--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         </div>
       </div>
 
-      <div class="container-fluid">
+      <!-- <div class="container-fluid">
         <div class="container-fluid">
           <script src="https://gist.github.com/axojolotl/46a6b66938be9878e944ab24d3cdaf11.js"></script>
         </div>
-      </div>
+      </div> -->
       <script src="js/FinisherHeader.js" type="text/javascript"></script>
     </section>
     <!-- <section>
