--- a/index.html
+++ b/index.html
@@ -1,121 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <!-- SCRIPTS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <!-- HEADER -->
-    <script src="js/finisher-header.es5.min.js" type="text/javascript"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>WaffoLabs</title>
-  </head>
-  <body>
-    <section>
-      <div class="container-fluid finisher-header">
-        <!-- NAVBAR -->
-        <nav class="navbar navbar-light navbar-expand-lg">
-          <a href="#" class="navbar-brand">WaffoLabs</a>
-          <!-- HAMBURGER MENU -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarToggler"
-            aria-controls="navbarToggler"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- HAMBURGER ITEMS -->
-          <div class="collapse navbar-collapse" id="navbarToggler">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <!-- HEADING -->
-        <div class="container-fluid" id="heading-container">
-          <h2>Hello, world!</h2>
-          <h1 id="heading">I'm Marjolo Mabuti</h1>
-          <p class="text-muted">Student | Developer | Enthusiast</p>
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <!-- SCRIPTS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet" />
+  <!-- HEADER -->
+  <script src="js/finisher-header.es5.min.js" type="text/javascript"></script>
+
+  <title>WaffoLabs</title>
+</head>
+
+<body>
+  <section class="cover-section finisher-header">
+    <div class="container">
+      <!-- NAVBAR -->
+      <nav class="navbar navbar-light navbar-expand-lg">
+        <a href="#" class="navbar-brand">WaffoLabs</a>
+        <!-- HAMBURGER MENU -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+          aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- HAMBURGER ITEMS -->
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="#project-heading">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="mailto:axojolotl@gmail.com">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/axojolotl"  target="_blank"
+            rel="noopener noreferrer">GitHub</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!-- HEADING -->
+      <div class="container" id="heading-container">
+        <div class="container">
+
+          <h1 id="heading">Marjolo Mabuti</h1>
+          <p class="text-muted" id="whoami">Student | Developer | Enthusiast</p>
           <!-- BUTTONS -->
-          <button id="btn-contact" type="button" class="btn btn-outline-dark">
+          <a  id="btn-contact" type="button" class="btn btn-outline-dark btn-lg" href="mailto:axojolotl@protonmail.com">
             Contact
-          </button>
-          <button id="btn-github" type="button" class="btn btn-dark">
+          </a>
+          <a id="btn-github" type="button" class="btn btn-dark btn-lg" href="https://github.com/axojolotl" target="_blank"
+            rel="noopener noreferrer">
             GitHub
-          </button>
+          </a>
         </div>
       </div>
-
-      <!-- <div class="container-fluid">
-        <div class="container-fluid">
-          <script src="https://gist.github.com/axojolotl/46a6b66938be9878e944ab24d3cdaf11.js"></script>
-        </div>
-      </div> -->
-      <script src="js/FinisherHeader.js" type="text/javascript"></script>
-    </section>
-    <!-- <section>
-      <div class="container-fluid">
-        <div class="container-fluid">
-          <h2 id="project-heading">Projects</h2>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="container-fluid">
-        <div class="container-fluid">
-          <h2 id="contact-heading">Contact</h2>
-        </div>
-      </div>
-    </section> -->
-
-    <section>
+    </div>
+    <script src="js/FinisherHeader.js" type="text/javascript"></script>
+  </section>
+  <section id="project-section">
+    <div class="container">
       <div class="container">
-        <h1>under construction</h1>
+        <h1 id="project-heading">Projects</h1>
+
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid rounded"
+              src="https://github.com/axojolotl/weathering-with-me/raw/main/public/img/demo.png"
+              alt="weathering-with-me">
+          </div>
+          <div class="col-12 col-md-6">
+            <h3 id="project-name">Weathering With Me</h3>
+            <hr>
+            <p>A basic weather app that to practice API requests with Mapbox and Weatherstack using the Express framework. 
+              Designed with Bootstrap Studio.
+            </p>
+            <p>Technologies used:
+            <ul>
+              <li>Node.js</li>
+              <li>Express</li>
+              <li>Handlebars</li>
+              <li>Bootstrap Studio</li>
+              <li>Mapbox API</li>
+              <li>Weatherstack API</li>
+            </ul>
+            </p>
+            <a id="btn-github" type="button" class="btn btn-outline-dark"
+              href="https://weathering-with-me.herokuapp.com/" target="_blank" rel="noopener noreferrer">
+              Check it out
+            </a>
+            <a id="btn-github" type="button" class="btn btn-dark" href="https://github.com/axojolotl/weathering-with-me"
+              target="_blank" rel="noopener noreferrer">
+              Source Code
+            </a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid rounded"
+              src="https://user-images.githubusercontent.com/72655919/167178713-2f19abca-2238-4f01-a58c-e1c1b4eb0dbe.png"
+              alt="Guess the number game">
+          </div>
+          <div class="col-12 col-md-6">
+            <h3 id="project-name">Guess The Number Game</h3>
+            <hr>
+            <p>A simple guessing game designed with Bootstrap Studio and scripted using vanilla Javascript to practice DOM manipulation.</p>
+            <p>Technologies used:
+            <ul>
+              <li>Vanilla Javascript</li>
+              <li>Bootstrap Studio</li>
+            </ul>
+            </p>
+
+            <a id="btn-github" type="button" class="btn btn-outline-dark"
+              href="https://axojolotl.github.io/guess-the-number-game/" target="_blank" rel="noopener noreferrer">
+              Check it out
+            </a>
+            <a id="btn-github" type="button" class="btn btn-dark"
+              href="https://github.com/axojolotl/guess-the-number-game" target="_blank" rel="noopener noreferrer">
+              Source Code
+            </a>
+          </div>
+        </div>
+
       </div>
-    </section>
-  </body>
+    </div>
+
+  </section>
+
+
+  <section>
+    <footer>
+      <div class="container">
+        <div class="container">
+          <span class="text-muted">© 2022 WaffoLabs | All Rights Reserved.</span>
+        </div>
+      </div>
+    </footer>
+  </section>
+</body>
+
 </html>
