--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="col-12 col-md-6">
             <h3 id="project-name">Weathering With Me</h3>
             <hr>
-            <p>A basic weather app that to practice API requests with Mapbox and Weatherstack using the Express framework. 
+            <p>A basic weather app to practice API requests with Mapbox and Weatherstack using the Express framework. 
               Designed with Bootstrap Studio.
             </p>
             <p>Technologies used:
@@ -103,7 +103,7 @@
               <li>Weatherstack API</li>
             </ul>
             </p>
-            <a id="btn-github" type="button" class="btn btn-outline-dark"
+            <a type="button" class="btn btn-outline-dark"
               href="https://weathering-with-me.herokuapp.com/" target="_blank" rel="noopener noreferrer">
               Check it out
             </a>
@@ -131,7 +131,7 @@
             </ul>
             </p>
 
-            <a id="btn-github" type="button" class="btn btn-outline-dark"
+            <a type="button" class="btn btn-outline-dark"
               href="https://axojolotl.github.io/guess-the-number-game/" target="_blank" rel="noopener noreferrer">
               Check it out
             </a>
@@ -147,14 +147,9 @@
 
   </section>
 
-
   <section>
-    <footer>
-      <div class="container">
-        <div class="container">
-          <span class="text-muted">© 2022 WaffoLabs | All Rights Reserved.</span>
-        </div>
-      </div>
+    <footer class="container-fluid">
+      <span class="text-muted">© 2022 WaffoLabs | All Rights Reserved</span>
     </footer>
   </section>
 </body>
