--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#project-heading">Projects</a>
+              <a class="nav-link active" href="#project-section">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="mailto:axojolotl@gmail.com">Contact</a>
