--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="nav-link active" href="#project-section">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mailto:axojolotl@gmail.com">Contact</a>
+              <a class="nav-link" href="mailto:axojolotl@gmail.com">Email</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/axojolotl"  target="_blank"
@@ -67,7 +67,7 @@
           <p class="text-muted" id="whoami">Student | Developer | Enthusiast</p>
           <!-- BUTTONS -->
           <a  id="btn-contact" type="button" class="btn btn-outline-dark btn-lg" href="mailto:axojolotl@protonmail.com">
-            Contact
+            Email
           </a>
           <a id="btn-github" type="button" class="btn btn-dark btn-lg" href="https://github.com/axojolotl" target="_blank"
             rel="noopener noreferrer">
