use column ordering,

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
               <a class="nav-link" href="mailto:axojolotl@gmail.com">Email</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://github.com/axojolotl"  target="_blank"
-            rel="noopener noreferrer">GitHub</a>
+              <a class="nav-link" href="https://github.com/axojolotl" target="_blank"
+                rel="noopener noreferrer">GitHub</a>
             </li>
           </ul>
         </div>
@@ -66,11 +66,11 @@
           <h1 id="heading">Marjolo Mabuti</h1>
           <p class="text-muted" id="whoami">Student | Developer | Enthusiast</p>
           <!-- BUTTONS -->
-          <a  id="btn-contact" type="button" class="btn btn-outline-dark btn-lg" href="mailto:axojolotl@protonmail.com">
+          <a id="btn-contact" type="button" class="btn btn-outline-dark btn-lg" href="mailto:axojolotl@protonmail.com">
             Email
           </a>
-          <a id="btn-github" type="button" class="btn btn-dark btn-lg" href="https://github.com/axojolotl" target="_blank"
-            rel="noopener noreferrer">
+          <a id="btn-github" type="button" class="btn btn-dark btn-lg" href="https://github.com/axojolotl"
+            target="_blank" rel="noopener noreferrer">
             GitHub
           </a>
         </div>
@@ -83,7 +83,7 @@
       <div class="container">
         <h1 id="project-heading">Projects</h1>
 
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-12 col-md-6">
             <img class="img-fluid rounded"
               src="https://github.com/axojolotl/weathering-with-me/raw/main/public/img/demo.png"
@@ -92,7 +92,7 @@
           <div class="col-12 col-md-6">
             <h3 id="project-name">Weathering With Me</h3>
             <hr>
-            <p>A basic weather app to practice API requests with Mapbox and Weatherstack using the Express framework. 
+            <p>A basic weather app to practice API requests with Mapbox and Weatherstack using the Express framework.
               Designed with Bootstrap Studio.
             </p>
             <p>Technologies used:
@@ -105,8 +105,8 @@
               <li>Weatherstack API</li>
             </ul>
             </p>
-            <a type="button" class="btn btn-outline-dark"
-              href="https://weathering-with-me.herokuapp.com/" target="_blank" rel="noopener noreferrer">
+            <a type="button" class="btn btn-outline-dark" href="https://weathering-with-me.herokuapp.com/"
+              target="_blank" rel="noopener noreferrer">
               Check it out
             </a>
             <a id="btn-github" type="button" class="btn btn-dark" href="https://github.com/axojolotl/weathering-with-me"
@@ -116,16 +116,19 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-12 col-md-6">
+        </div>
+
+        <div class="row align-items-center">
+          <div class="col-md-6 order-md-2">
             <img class="img-fluid rounded"
               src="https://user-images.githubusercontent.com/72655919/167178713-2f19abca-2238-4f01-a58c-e1c1b4eb0dbe.png"
               alt="Guess the number game">
           </div>
-          <div class="col-12 col-md-6">
+          <div class="col-md-6 order-md-1">
             <h3 id="project-name">Guess The Number Game</h3>
             <hr>
-            <p>A simple guessing game designed with Bootstrap Studio and scripted using vanilla Javascript to practice DOM manipulation.</p>
+            <p>A simple guessing game designed with Bootstrap Studio and scripted using vanilla Javascript to practice
+              DOM manipulation.</p>
             <p>Technologies used:
             <ul>
               <li>Vanilla Javascript</li>
@@ -133,8 +136,8 @@
             </ul>
             </p>
 
-            <a type="button" class="btn btn-outline-dark"
-              href="https://axojolotl.github.io/guess-the-number-game/" target="_blank" rel="noopener noreferrer">
+            <a type="button" class="btn btn-outline-dark" href="https://axojolotl.github.io/guess-the-number-game/"
+              target="_blank" rel="noopener noreferrer">
               Check it out
             </a>
             <a id="btn-github" type="button" class="btn btn-dark"
