--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="container">
         <h1 id="project-heading">Projects</h1>
 
-        <div class="row align-items-center">
+        <div class="row align-items-start">
           <div class="col-12 col-md-6">
             <img class="img-fluid rounded"
               src="https://github.com/axojolotl/weathering-with-me/raw/main/public/img/demo.png"
@@ -118,7 +118,7 @@
 
         </div>
 
-        <div class="row align-items-center">
+        <div class="row align-items-start">
           <div class="col-md-6 order-md-2">
             <img class="img-fluid rounded"
               src="https://user-images.githubusercontent.com/72655919/167178713-2f19abca-2238-4f01-a58c-e1c1b4eb0dbe.png"
